third_party/rust/inherent/tests/ui/blanket-impl.stderr
error[E0118]: no nominal type found for inherent implementation
 --> tests/ui/blanket-impl.rs:8:1
  |
8 | impl<T> A for T {
  | ^^^^^^^^^^^^^^^ impl requires a nominal type
  |
  = note: either implement a trait on it or create a newtype to wrap it instead
